1.1.5/initial-setup.md
# Первоначальная настройка Carrot

В данном разделе описывается процесс первоначальной настройки и установки **Carrot** на рабочие станции под управлением операционной системы **Windows 10**.

## Установка стороннего ПО

Для работы **Carrot** требуется установка стороннего программного обеспечения, осуществляющее программное взаимодействие между компонентами системы.

### Установка компонентов среды выполнения библиотек "Visual C++ для Visual Studio 2013"

> В случае отсутствия предустановленных на рабочей станции **компонентов среды выполнения библиотек "Visual C++ для Visual Studio 2013"**, необходимо их загрузить с [официального сайта производителя "Microsoft"](https://www.microsoft.com/ru-ru/download/details.aspx?id=40784) или воспользоваться соответствующей кнопкой ниже:
>
> *[`Загрузить компоненты среды выполнения библиотек "Visual C++ для Visual Studio 2013"`](https://aka.ms/highdpimfc2013x64enu)*

Для установки компонентов среды выполнения библиотек **"Visual C++ для Visual Studio 2013"**, необходимо запустить исполняющий файл с расширением **".exe"**.

### Установка компонентов среды выполнения библиотек "Visual C++ для Visual Studio 2015, 2017, 2019 и 2022"

> В случае отсутствия предустановленных на рабочей станции **компонентов среды выполнения библиотек "Visual C++ для Visual Studio 2015, 2017, 2019 и 2022"**, необходимо их загрузить с [официального сайта производителя "Microsoft"](https://learn.microsoft.com/ru-ru/cpp/windows/latest-supported-vc-redist?view=msvc-170#visual-studio-2015-2017-2019-and-2022) или воспользоваться соответствующей кнопкой ниже:
>
> *[`Загрузить компоненты среды выполнения библиотек "Visual C++ для Visual Studio 2015, 2017, 2019 и 2022"`](https://aka.ms/vs/17/release/vc_redist.x64.exe)*

Для установки компонентов среды выполнения библиотек **"Visual C++ для Visual Studio 2015, 2017, 2019 и 2022"**, необходимо запустить исполняющий файл с расширением **".exe"**. 

### Установка программной платформы "Microsoft .NET версии № 4.7.1 runtime"

> В случае отсутствия предустановленных на рабочей станции **программной платформы "Microsoft .NET версии № 4.7.1 runtime"**, необходимо их загрузить с [официального сайта производителя "Microsoft"](https://dotnet.microsoft.com/en-us/download/dotnet-framework/thank-you/net471-offline-installer) или воспользоваться соответствующей кнопкой ниже:
>
> *[`Загрузить программную платформу "Microsoft .NET версии № 4.7.1 runtime"`](https://dotnet.microsoft.com/en-us/download/dotnet-framework/thank-you/net471-offline-installer)*

Для установки программной платформы **"Microsoft .NET версии № 4.7.1 runtime"**, необходимо запустить исполняющий файл с расширением **".exe"**.

### Установка драйвера для устройств видеозахвата изображений "Blackmagic"

В первую очередь, перед установкой драйвера для устройств видеозахвата изображений **"Blackmagic"**, необходимо осуществить его загрузку с [официального сайта производителя "Blackmagicdesign"](https://www.blackmagicdesign.com/support/download/2de27a45d5454a0aa37353b4a742c179/Windows).

В открывшейся вкладке веб-браузера, необходимо нажать кнопку `Download Only` и дождаться завершения загрузки соответствующего файла.

![BMD Install](../images/1.1.5/initial-setup/is-tp-bmd-install.png)

Далее, после загрузки драйвера для устройств видеозахвата изображений **"Blackmagic"**, необходимо воспользоваться файловым архиватором и запустить файл-установщик с расширением **".msi"** для дальнейшей установки.

### Установка драйвера для видеокарты Nvidia

Для повышения производительности и обеспечения совместимости при работе **Carrot** со сторонним программным обеспечением, необходима установка драйвера **"Nvidia Studio"** версии **"528.49"**.

> В случае отсутствия предустановленного на рабочей станции драйвера **"Nvidia Studio 528.49"** , необходимо осуществить его загрузку с [официального сайта производителя "Nvidia"](https://www.nvidia.com/en-us/drivers/details/199662/) или воспользоваться соответствующей кнопкой ниже:
>
> *[`Загрузить драйвер "Nvidia Studio версии № 528.49"`](https://us.download.nvidia.com/Windows/528.49/528.49-desktop-win10-win11-64bit-international-nsd-dch-whql.exe)*

Для установки драйвера **"Nvidia Studio версии № 528.49"**, необходимо запустить исполняющий файл с расширением **".exe"**.

## Установка Carrot на рабочую станцию

После установки стороннего программного обеспечения, необходимо открыть поставляемый файл с программным обеспечением **Carrot**. 

![Carrot Folder Contents](../images/1.1.5/initial-setup/is-ci-carrot-folder-contents.png)

Поставляемое программное обеспечение **Carrot** представляет из себя папку с директориями **"Bin"**, **"Data"** и **"Help"**.

Установка **Carrot** на рабочую станцию осуществляется посредством **инициализации** его внутренних компонентов. Для их **инициализации**, необходимо:

- открыть папку **"Bin"**;
- запустить файл **"InitSettings.exe"**;
- в открывшемся окне **"Message"** нажать кнопку `ОК`.

В результате проделанных действий, на **рабочем столе** рабочей станции отобразятся ярлыки приложений **Carrot**, а установка **Carrot** считается завершённой.

> Для работы **Carrot**, необходимо использование лицензионного ключа (поставляется на USB Flash накопителе совместно с программным обеспечением **Carrot**), в противном случае, работа **Carrot** будет осуществляться с ограниченным функционалом.
>
> Для получения доступа к функционалу **Carrot** в демонстрационном режиме, необходимо в параметр `License Key` приложений **Carrot** ввести значение `0`.
>
> Ввод лицензионного ключа **Carrot** рекомендуется проводить совместно со специалистами технической поддержки **Carrot Broadcast**.
